--- a/views/include/_header.ejs
+++ b/views/include/_header.ejs
@@ -105,7 +105,7 @@
 
             <li>
               <a href="#" class="header-top-social-link">
-                <ion-icon name="logo-pinterest"></ion-icon>
+                <ion-icon name="logo-telegram"></ion-icon>
               </a>
             </li>
 
