--- a/views/include/_header-admin.ejs
+++ b/views/include/_header-admin.ejs
@@ -79,7 +79,7 @@
         </ul>
 
         <div class="wrapper">
-          <ul class="header-top-social-list">
+          <!-- <ul class="header-top-social-list">
 
             <li>
               <a href="#" class="header-top-social-link">
@@ -105,7 +105,7 @@
               </a>
             </li>
 
-          </ul>
+          </ul> -->
 
           <form action="/logout" method="get">
             <button class="header-top-btn">
