--- a/views/include/_header.ejs
+++ b/views/include/_header.ejs
@@ -83,7 +83,7 @@
         </ul>
 
         <div class="wrapper">
-          <ul class="header-top-social-list">
+          <!-- <ul class="header-top-social-list">
 
             <li>
               <a href="#" class="header-top-social-link">
@@ -109,7 +109,7 @@
               </a>
             </li>
 
-          </ul>
+          </ul> -->
           <form action="/logout" method="get">
           <button class="header-top-btn">
             <i class="fas fa-sign-out-alt"></i> Logout
