--- a/views/include/_header-admin.ejs
+++ b/views/include/_header-admin.ejs
@@ -8,9 +8,9 @@
   <title>HomeHub - <%= user ? user.role : '' %></title>
   <style>
     .header-bottom-actions {
-      display: flex;
-      justify-content: center;
-  }
+    display: flex;
+    justify-content: center;
+}
   
   .header-bottom-actions-btn {
       display: flex;
@@ -79,7 +79,7 @@
         </ul>
 
         <div class="wrapper">
-          <!-- <ul class="header-top-social-list">
+          <ul class="header-top-social-list">
 
             <li>
               <a href="#" class="header-top-social-link">
@@ -101,11 +101,22 @@
 
             <li>
               <a href="#" class="header-top-social-link">
-                <ion-icon name="logo-pinterest"></ion-icon>
+                  <ion-icon name="logo-github"></ion-icon>
               </a>
-            </li>
+          </li>
+          
+          <li>
+            <a href="#" class="header-top-social-link">
+                <ion-icon name="logo-linkedin"></ion-icon>
+            </a>
+        </li>
+        <li>
+          <a href="#" class="header-top-social-link">
+              <ion-icon name="logo-pinterest"></ion-icon>
+          </a>
+      </li>
 
-          </ul> -->
+          </ul>
 
           <form action="/logout" method="get">
             <button class="header-top-btn">
