--- a/views/about.ejs
+++ b/views/about.ejs
@@ -15,5 +15,5 @@
 <!-- /include cta -->
 
 <!-- include footer -->
-<%- include('include/_footer') %>
+<%- include('include/_footer', { role: role }) %>
 <!-- /include footer -->
