--- a/views/include/_about-admin.ejs
+++ b/views/include/_about-admin.ejs
@@ -59,7 +59,7 @@
           process of buying, selling, or renting properties as seamless 
           and stress-free as possible. 
         </p>
-        <a href="/service" class="btn">Our Services</a>
+        <a href="/admin-service" class="btn">Our Services</a>
       </div>
     </div>
   </section>
