--- a/views/include/_header-admin.ejs
+++ b/views/include/_header-admin.ejs
@@ -138,10 +138,10 @@
         <nav class="navbar" data-navbar>
 
           <div class="navbar-top">
-<!-- 
-            <a href="#" class="logo">
-              <img src="./images/homehub-logo.jpg" alt="Homehub logo">
-            </a> -->
+
+            <a href="/admin-home" class="logo">
+              <img src="./images/hub.png" alt="Homehub logo">
+            </a>
 
             <button class="nav-close-btn" data-nav-close-btn aria-label="Close Menu">
               <ion-icon name="close-outline"></ion-icon>
@@ -161,7 +161,7 @@
               </li>
 
               <li>
-                <a href="/admin-about" class="navbar-link" data-nav-link>About</a>
+                <a href="/admin-my-post" class="navbar-link" data-nav-link>My Posts</a>
               </li>
 
               <li>
