--- a/views/my-post-admin.ejs
+++ b/views/my-post-admin.ejs
@@ -6,14 +6,14 @@
 <%- include('include/_hero') %>
 <!-- /include hero -->
 
-<!-- include about -->
-<%- include('include/_about-admin') %>
-<!-- /include about -->
+<!-- include _all-admin-properties -->
+<%- include('include/_my-post-admin') %>
+<!-- /include _all-admin-properties -->
 
 <!-- include cta -->
 <%- include('include/_cta') %>
 <!-- /include cta -->
 
 <!-- include footer -->
-<%- include('include/_footer', { role: role }) %>
+<%- include('include/_footer') %>
 <!-- /include footer -->
