--- a/views/include/_header.ejs
+++ b/views/include/_header.ejs
@@ -137,7 +137,7 @@
           <div class="navbar-top">
 
             <a href="#" class="logo">
-              <img src="./images/logo.png" alt="Homeverse logo">
+              <img src="./images/hub.png" alt="Homeverse logo">
             </a>
 
             <button class="nav-close-btn" data-nav-close-btn aria-label="Close Menu">
@@ -158,7 +158,7 @@
               </li>
 
               <li>
-                <a href="/about" class="navbar-link" data-nav-link>About</a>
+                <a href="/my-post" class="navbar-link" data-nav-link>My Posts</a>
               </li>
 
               <li>
