--- a/views/index-admin.ejs
+++ b/views/index-admin.ejs
@@ -27,5 +27,5 @@
   <!-- /include cta -->
   
   <!-- include footer -->
-  <%- include('include/_footer') %>
+  <%- include('include/_footer', { role: role }) %>
   <!-- /include footer -->
