--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,37 +1,37 @@
   <!-- include header -->
-<%- include('include/_header') %>
-<!-- /include header -->
+  <%- include('include/_header') %>
+  <!-- /include header -->
+    
+  <!-- include hero -->
+  <%- include('include/_hero') %>
+  <!-- /include hero -->   
   
-<!-- include hero -->
-<%- include('include/_hero') %>
-<!-- /include hero -->   
-
-<!-- include about -->
-<%- include('include/_about') %>
-<!-- /include about -->
-
-<!-- include service -->
-
-<!-- /include service -->
-     
-
-<!-- include homepage-properties -->
-
-<!-- /include homepage-properties -->
-      
-<!-- include features -->
-
-<!-- /include features -->
-
-<!-- include blog -->
-<%- include('include/_blog', { apartments: apartments }) %>
-<!-- /include blog -->
-
-<!-- include cta -->
-<%- include('include/_cta') %>
-<!-- /include cta -->
-
-
-<!-- include footer -->
-<%- include('include/_footer') %>
-<!-- /include footer -->
+  <!-- include about -->
+  <%- include('include/_about') %>
+  <!-- /include about -->
+  
+  <!-- include service -->
+  
+  <!-- /include service -->
+       
+  
+  <!-- include homepage-properties -->
+  
+  <!-- /include homepage-properties -->
+        
+  <!-- include features -->
+  
+  <!-- /include features -->
+  
+  <!-- include blog -->
+  <%- include('include/_blog', { apartments: apartments }) %>
+  <!-- /include blog -->
+  
+  <!-- include cta -->
+  <%- include('include/_cta') %>
+  <!-- /include cta -->
+  
+  
+  <!-- include footer -->
+  <%- include('include/_footer', { role: role }) %>
+  <!-- /include footer -->
