--- a/views/my-post.ejs
+++ b/views/my-post.ejs
@@ -1,19 +1,19 @@
-<!-- include header -->
-<%- include('include/_header-admin') %>
+  <!-- include header -->
+<%- include('include/_header') %>
 <!-- /include header -->
 
 <!-- include hero -->
 <%- include('include/_hero') %>
 <!-- /include hero -->
 
-<!-- include about -->
-<%- include('include/_about-admin') %>
-<!-- /include about -->
+<!-- include all-properties -->
+<%- include('include/_my-post', { apartments: apartments }) %>
+<!-- /include all-properties -->
 
 <!-- include cta -->
 <%- include('include/_cta') %>
 <!-- /include cta -->
 
 <!-- include footer -->
-<%- include('include/_footer', { role: role }) %>
+<%- include('include/_footer') %>
 <!-- /include footer -->
