--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -67,14 +67,18 @@
             <button>Follow</button>
           </nav>
 
-          <div class="photos">
+          <!-- <div class="photos">
             <img src="/images/img_1.avif" alt="Photo" />
             <img src="/images/img_2.avif" alt="Photo" />
             <img src="/images/img_3.avif" alt="Photo" />
             <img src="/images/img_4.avif" alt="Photo" />
             <img src="/images/img_5.avif" alt="Photo" />
             <img src="/images/img_6.avif" alt="Photo" />
-          </div>
+          </div> -->
+
+          <!-- include all-properties -->
+          <%- include('include/_my-post', { apartments: apartments }) %>
+          <!-- /include all-properties -->
         </div>
       </div>
     </div>
