--- a/views/index-admin.ejs
+++ b/views/index-admin.ejs
@@ -7,7 +7,7 @@
   <!-- /include hero -->   
   
   <!-- include about -->
-  <%- include('include/_about') %>
+  <%- include('include/_about-admin') %>
   <!-- /include about -->
   
   <!-- include service -->
