--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,7 +1,3 @@
-/*
- ⚡MAKE SURE TO SUBSCRIBE PROGRAMMER CLOUD⚡
-*/
-
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
 
 body {
@@ -30,6 +26,13 @@ a {
   background: url("/images/bg.jpeg") no-repeat 50% 20% / cover;
   min-height: calc(100px + 15vw);
 }
+
+/* .header__wrapper header {
+  width: 100%;
+  background: url("/images/bg.jpeg") no-repeat center center;
+  background-size: contain; 
+  min-height: calc(100px + 10vw); 
+} */
 
 .header__wrapper .cols__container .left__col {
   padding: 25px 20px;
