--- a/views/include/_all-apartments.ejs
+++ b/views/include/_all-apartments.ejs
@@ -204,10 +204,10 @@
 </body>
 <script>
     // Delete function
-    function deleteApartmentById(username) {
-        if (confirm('Are you sure you want to delete this user?')) {
+    function deleteApartmentById(apartmentId) {
+        if (confirm('Are you sure you want to delete this apartment?')) {
             // Redirect to the delete route with the storage ID
-            window.location.href = "/delete-apartments/" + username + "?_method=DELETE";
+            window.location.href = "/delete-apartments/" + apartmentId + "?_method=DELETE";
         }
     }
    </script>
