--- a/views/include/_about-admin.ejs
+++ b/views/include/_about-admin.ejs
@@ -9,7 +9,7 @@
 
         <p class="section-subtitle">About Us</p>
 
-        <h2 class="h2 section-title">The Leading Real Estate Rental Marketplace in Sierra Leone.</h2>
+        <h2 class="h2 section-title">The Leading Real Estate Marketplace in Sierra Leone.</h2>
 
         <p class="about-text">
           Welcome to Homehub, Sierra Leone's leading real estate marketplace where house owners and 
