--- a/views/include/_hero-admin.ejs
+++ b/views/include/_hero-admin.ejs
@@ -13,7 +13,7 @@
             <p class="hero-subtitle">
               <ion-icon name="home"></ion-icon>
 
-              <span>Real Estate Agency</span>
+              <span>Homehub Housing Agency</span>
             </p>
 
             <h2 class="h1 hero-title">Find Your Dream House By Us</h2>
