--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -40,7 +40,7 @@
 
                 <input type="text" name="fullname" placeholder="Full Name" required>
                 <input type="text" name="username" placeholder="Username" required>
-                <input type="email" name="email" placeholder="Email" required>
+                <input type="email" name="email" placeholder="Email (Optional)">
                 <input type="text" name="phone" placeholder="Phone Number" required>
                 <div class="password-wrapper">
                     <input type="password" name="password" id="password" placeholder="Password" required>
